# simpson

./: .gitignore  CMakeLists.txt  README.md  integrate_sin.cpp
examples/: CMakeLists.txt
include/integrator/: simpson.hpp
integrator/: CMakeLists.txt  c_api.cpp  c_api.h  simpson.cpp
src/: CMakeLists.txt  c_api.cpp
src/integrator/: simpson.cpp
